Internship/Internship/src/objects/Junction_Intern_Test__c.object
<CustomObject>
    <fields>
        <fullName>Intern__c</fullName>
        <label>Intern</label>
        <referenceTo>Intern__c</referenceTo>
        <relationshipName>Junction_Intern_Test</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <label>Mark</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Test__c</referenceTo>
        <relationshipName>Junction_Intern_Test</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Test Mark</label>
    <nameField>
        <label>Mark Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>